<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Productos_Activity">

    <EditText
        android:id="@+id/txtId_Pro"
        android:layout_width="66dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Pro_ID"
        android:inputType="number"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDes_Pro"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Pro_Des"
        android:inputType="textPersonName"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtId_Pro" />

    <EditText
        android:id="@+id/txtUnidad_Pro"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Pro_Unidad"
        android:inputType="textPersonName"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDes_Pro" />

    <EditText
        android:id="@+id/txtStock_Pro"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Pro_Stock"
        android:inputType="number"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUnidad_Pro" />

    <EditText
        android:id="@+id/txtPrecio_Pro"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Pro_Precio"
        android:inputType="numberDecimal"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStock_Pro" />

    <EditText
        android:id="@+id/txtCantidad_Pro"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/Pro_Cantidad"
        android:inputType="number"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBuscar_Pro"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_buscar_click"
        android:onClick="Buscar_Pro"
        app:layout_constraintStart_toEndOf="@+id/btnEditar_Pro"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio_Pro"
         />

    <ImageButton
        android:id="@+id/btnEliminar_Pro"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_eliminar_click"
        android:onClick="Eliminar_Pro"
        app:layout_constraintStart_toEndOf="@+id/btnGuardar_Pro"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio_Pro" />

    <ImageButton
        android:id="@+id/btnGuardar_Pro"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnguardarclick"
        android:onClick="Guardar_Pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio_Pro"
         />

    <ImageButton
        android:id="@+id/btnRecargar_Pro"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_recargar_click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar_Pro"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio_Pro"

         />

    <ImageButton
        android:id="@+id/btnEditar_Pro"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_editar_click"
        android:onClick="Edit_Pro"
        app:layout_constraintStart_toEndOf="@+id/btnEliminar_Pro"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio_Pro"
         />

    <Space
        android:id="@+id/space2"
        android:layout_width="408dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditar_Pro" />

    <LinearLayout
        android:id="@+id/ly_Pro"
        android:layout_width="411dp"
        android:layout_height="295dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/table_Pro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#9E8CCCFF"
                    android:stretchColumns="*"
                    android:textColor="#008EFF" />
            </HorizontalScrollView>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/btnEntradas_Pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="btnEntradas"
        android:text="@string/Pro_Entradas"
        android:textSize="11sp"
        android:textStyle="italic"
        app:backgroundTint="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSalidas_Pro"
        app:layout_constraintTop_toBottomOf="@+id/btnHistorial" />

    <Button
        android:id="@+id/btnSalidas_Pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:onClick="btnSalidas"
        android:text="@string/Pro_Salidas"
        android:textSize="11sp"
        android:textStyle="italic"
        app:backgroundTint="#CDF44336"
        app:layout_constraintStart_toEndOf="@+id/txtPrecio_Pro"
        app:layout_constraintTop_toBottomOf="@+id/btnHistorial" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:onClick="historial"
        android:text="@string/Pro_Historial"

        android:textSize="11sp"
        android:textStyle="italic"
        app:backgroundTint="#BCFF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtStock_Pro"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar_Pro" />

    <Button
        android:id="@+id/btnAgregar_Pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:onClick="Cantidad"
        android:text="Button"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtDes_Pro"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidad_Pro" />
</androidx.constraintlayout.widget.ConstraintLayout>